--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -200,23 +200,7 @@ a {
 	background-color: #FFF0F2;
 }
 
-.main_solution_hero .primary_fill_btn {
-	background-color: #E12B3E;
-	outline: 0;
-	border: 0;
-	width: fit-content;
-	color: #ffff !important;
-	padding: 0.5rem 1rem;
-	font-size: 14px;
-	font-weight: 400;
-	overflow: hidden;
-	white-space: nowrap;
-	border-radius: 12px;
-}
 
-.main_solution_hero .primary_fill_btn {
-	background-color: #E12B3E !important;
-}
 
 .main_solution_hero .secondary_fill_btn {
 	background-color: #FFF0F2;
@@ -660,119 +644,213 @@ a {
 
 
 /* end footer */
+
 /* each-slution */
-.main_solution_header {
+.each_solution_header {
 	font-weight: 700;
 	font-size: 64px;
 	line-height: 100%;
 	letter-spacing: 0;
 	margin-bottom: 51px;
 }
-.main_solution_hero {
+.each_solution_hero {
 	background-image: url('/images/pages/each-solution/bg1.png');
 	background-size: 100%;
 	background-position: bottom center;
 	background-repeat: no-repeat;
 	margin-top:6.418rem;
+	margin-bottom: 9.688rem;
 }
-.main_solution_text {
+.each_solution_text {
 	font-size: 32px;
 	line-height: 150%;
 	letter-spacing: 0;
 	font-weight: 700;
 	color: #666666;
 }
-.main_solution_bg {
+.each_solution_bg {
 	padding-bottom: 89px;
 }
 
-/* Code for tablet screen size */
-@media (min-width: 768px) and (max-width: 1199px) {
-	/* Add your styles for tablet here */
-	.main_solution_header {
-		font-size: 48px;
-	}
-	.main_solution_text {
-		font-size: 24px;
-	}
-
-	/* .main_solution_content {
-		padding: 6rem;
-	} */
-	.main_solution_content h1 {
-		font-size: 32px !important;
-	}
-	.main_solution_content p {
-		font-size: 24px;
-	}
-
-	.main_solution_bg2 {
-		padding: 6rem;
-	}
-
-	.main_solution_bg3 {
-		padding: 6rem 6rem 0 6rem;
-	}
-	.main_solution_bg3 h1 {
-		font-size: 28px;
-	}
-
-	.main_solution_bg4_box{
-		padding: 0 6rem 6rem;
-	}
-	.main_solution_bg4 {
-		height: 400px;
-	}
+.each_solution_left_panel {
+	padding-left: 98px;
+    padding-right: 98px;
+    padding-top: 78px;
+    padding-bottom: 78px;
+}
+.each_solution_right_panel {
+	background-image: url('/images/pages/main-solution/bg1.svg');
+	background-size: 100% 100%;
+	background-position: top left;
+	background-repeat: no-repeat;
+	height: 100%;
+	overflow: hidden;
 }
 
-/* Code for mobile screen size */
-@media (max-width: 768px) {
-	/* Add your styles for mobile here */
-	.main_solution_header {
-		font-size: 24px;
-	}
-	.main_solution_text {
-		font-size: 20px;
-	}
-	.main_solution_left_panel {
-		padding: 3rem 0 3rem 3rem;
-	}
-	.main_solution_right_panel {
-		height: 300px;
-	}
 
-	/* .main_solution_content {
-		padding: 3rem;
-	} */
-	.main_solution_content h1 {
-        font-size: 24px !important;
-    }
-	.main_solution_content p {
-		font-size: 16px;
+.each_solution_toolkit{
+	margin-top:100px;
+	margin-bottom: 127px;
+}
+.each_solution_toolkit h1{
+	font-size: 32px;
+	color: #000000;
+	margin-bottom: 2rem;
+}
+.each_solution_toolkit .toolkit_card {
+	border-width: 0px 6px 6px 0px;
+	border-style: solid;
+	border-radius: 32px;
+	padding: 24px;
+	cursor: pointer ;
+}
+.each_solution_toolkit .toolkit_card.green {
+	background-color: #FAFFFE;
+	border-color: #BAF9F2;
+}
+.each_solution_toolkit .toolkit_card.blue {
+	background-color: #F7FBFE;
+	border-color: #BADBF9;
+}
+.each_solution_toolkit .toolkit_card h4 {
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 120%;
+}
+.each_solution_toolkit .toolkit_card p {
+	color: #666666;
+	line-height: 120%;
+}
+.each_solution_toolkit .toolkit_card span {
+	font-size: 14px;
+}
+.each_solution_toolkit .toolkit_card.green span {
+	color: #1BEFD8;
+	line-height: 150%;;
+}
+.each_solution_toolkit .toolkit_card.blue span {
+	color: #74BAF9;
+}
+.each_solution_toolkit .toolkit_card_wrapper{
+	margin-bottom: 2.938rem;
+}
+.each_solution_toolkit .toolkit_card_wrapper.left{
+	padding-right: 1.84rem;
+}
+.each_solution_toolkit .toolkit_card_wrapper.right{
+	padding-left: 1.84rem;
+}
+@media (min-width:1200px) and (max-width:1359px){
+	.each_solution_header {
+		font-size: 51px;
+		margin-bottom: 31px;
 	}
-
-	.main_solution_bg2 {
-		padding: 3rem;
-	}
-
-	.main_solution_bg3 {
-		padding: 3rem 3rem 0 3rem;
-	}
-	.main_solution_bg3 h1 {
-		font-size: 24px;
-	}
-
-	.main_solution_bg4_box{
-		padding: 0 3rem 3rem;
-	}
-	.main_solution_bg4 {
-		height: 300px;
-		padding: 1rem;
-	}
-	.footer_top .card {
-		padding: 1.5rem;
+	.each_solution_text {
+		font-size: 21px;
 	}
 }
+@media (min-width: 992px) and (max-width:1199px){
+	.each_solution_header {
+		font-size: 39px;
+		margin-bottom: 30px;
+	}
+	.each_solution_text {
+		font-size: 17px;
+		line-height: 150%;
+	}
+	.each_solution_toolkit .toolkit_card p {
+		font-size: 0.875rem;
+	}
+	
+}
+/* Tablets (768px–991px) */
+@media (min-width: 768px) and (max-width: 991px){
+	.each_solution_left_panel {
+		padding-top: 20px;
+		padding-bottom: 35px;
+	}
+	.each_solution_right_panel {
+		background-size: contain;
+		background-position: center top;
+	}
+	.each_solution_hero {
+		margin-top: 1.418rem;
+		margin-bottom: 2.688rem;
+	}
+	.each_solution_text {
+		font-size: 21px;
+	}
+	.each_solution_header {
+		font-size: 47px;
+		margin-bottom: 21px;
+	}	
+	.each_solution_toolkit .toolkit_card p {
+		font-size: 0.688rem;
+	}
+	.each_solution_toolkit h1 {
+		font-size: 21px;
+	}
+	.each_solution_toolkit .toolkit_card h4 {
+		font-size: 18px;
+	}
+	.each_solution_toolkit .toolkit_card span {
+		font-size: 12px;
+	}
+	.each_solution_toolkit .toolkit_card {
+		padding: 15px;
+	}
+	.each_solution_toolkit .toolkit_card_wrapper {
+		margin-bottom: 1.938rem;
+	}
+	.construction_supplies {
+		margin-bottom: 70px !important;
+	}
+}
+/* Mobile (below 768px) */
+@media (max-width: 767px){
+	.each_solution_text {
+		font-size: 13px;
+	}
+	.each_solution_header {
+		font-size: 33px;
+		margin-bottom: 21px;
+	}
+	.each_solution_hero {
+		margin-top: 1.418rem;
+		margin-bottom: 3.688rem;
+	}
+	.each_solution_left_panel {
+		padding-top: 10px;
+		padding-bottom: 43px;
+	}
+	.each_solution_right_panel {
+		background-size: auto 100%;
+		background-position: center;
+	}
+	.each_solution_toolkit h1 {
+		font-size: 22px;
+	}
+	.each_solution_toolkit .toolkit_card p {
+		font-size: 0.75rem;
+	}
+	.each_solution_toolkit .toolkit_card_wrapper.left {
+		padding-right: 0.75rem;
+	}
+	.each_solution_toolkit .toolkit_card_wrapper.right {
+		padding-left: 0.75rem;
+	}
+	.each_solution_toolkit .toolkit_card_wrapper {
+		margin-bottom: 1.938rem;
+	}
+	.each_solution_toolkit .toolkit_card h4 {
+		font-size: 18px;
+	}
+	
+}
+	
+	
+		
+
 /* end each-solution */
 
 
@@ -862,26 +940,6 @@ a {
 	border-top: 6px solid #DABAF9 !important;
 }
 
-
-
-
-
-.main_solution_left_panel {
-	padding-left: 98px;
-    padding-right: 118px;
-	padding-top: 78px;
-    padding-bottom: 78px;
-
-}
-
-.main_solution_right_panel {
-	background-image: url('/images/pages/main-solution/bg1.svg');
-	background-size: 100% 100%;
-	background-position: top left;
-	background-repeat: no-repeat;
-	height: 100%;
-	overflow: hidden;
-}
 .main_solution_content {
 	/* padding: 8rem; */
 	margin-top:9.688rem;
@@ -919,70 +977,14 @@ a {
 	margin-right: 47px;
 
 }
-.main_solution_toolkit{
-	margin-top:100px;
-}
 
 .main_solution_bg3 h1 {
 	font-size: 32px;
 	font-weight: 700;
 }
 
-.main_solution_toolkit_box {
-	border-width: 0px 6px 6px 0px;
-	border-style: solid;
-	border-radius: 32px;
-	padding: 24px;
-	cursor: pointer ;
-}
-.main_solution_toolkit_box.green {
-	background-color: #FAFFFE;
-	border-color: #BAF9F2;
-}
-.main_solution_toolkit_box.blue {
-	background-color: #F7FBFE;
-	border-color: #BADBF9;
-}
-.main_solution_toolkit_box h1 {
-	font-size: 24px;
-	font-weight: 700;
-	line-height: 120%;
-}
-.main_solution_toolkit_box p {
-	color: #666666;
-	line-height: 120%;
-}
-.main_solution_toolkit_box span {
-	font-size: 14px;
-}
-.main_solution_toolkit_box.green span {
-	color: #1BEFD8;
-	line-height: 150%;;
-}
-.main_solution_toolkit_box.blue span {
-	color: #74BAF9;
-}
 
-.main_solution_toolkit_blue_box {
-	background-color: #F7FBFE;
-	border-width: 0px 6px 6px 0px;
-	border-style: solid;
-	border-color: #BAF9F2;
-	border-radius: 32px;
-	padding: 24px;
-}
-.main_solution_toolkit_blue_box h1 {
-	font-size: 24px;
-	font-weight: 700;
-	line-height: 120%;
-}
-.main_solution_toolkit_blue_box p {
-	color: #666666;
-}
-.main_solution_toolkit_blue_box span {
-	color: #1BEFD8;
-	font-size: 14px;
-}
+
 .main_solution_check_list{
 	margin-top:127px;
 }
@@ -1176,6 +1178,17 @@ a {
 		margin-bottom: 3.375rem;
 	}
 }
+/* Code for tablet screen size */
+@media (min-width: 768px) and (max-width: 1199px) {
+	
+	
+	.main_solution_content h1 {
+		font-size: 32px !important;
+	}
+	.main_solution_content p {
+		font-size: 24px;
+	}
+}
 
 /* Tablets (768px–991px) */
 @media (min-width: 768px) and (max-width: 991px) {
@@ -1265,7 +1278,14 @@ a {
 	.business_toolkit_wrapper {
 		margin-bottom: 0.375rem;
 	}
+	.main_solution_content h1 {
+        font-size: 24px !important;
+    }
+	.main_solution_content p {
+		font-size: 16px;
+	}
 }
+
 	
 
 /* end main solution page */
@@ -2466,10 +2486,10 @@ margin-bottom: 175px;
 	width:100%;
 	height: 747px;
 }
-.toolkit_card{
+.inevntory_toolkit_cards{
 	margin-bottom: 47px;
 }
-.toolkit_card .inventory_import_tabs{
+.inevntory_toolkit_cards .inventory_import_tabs{
 	margin-bottom: 60px;
 }
 .toolkit_cards_container{
@@ -2500,38 +2520,38 @@ margin-bottom: 175px;
 	width: 100%;
 	height: 100%;
 }
-.toolkit_card .title_tag{
+.inevntory_toolkit_cards .title_tag{
 	color:#E12B3E;
 	font-size: 32px;
 }
-.toolkit_card .title{
+.inevntory_toolkit_cards .title{
 	font-size: 32px;
 	line-height: 100%;
 }
-.toolkit_card .sub_title{
+.inevntory_toolkit_cards .sub_title{
 	font-size: 32px;
 	color:#666666;
 	line-height: 150%;
 }
-.toolkit_card .card{
+.inevntory_toolkit_cards .card{
 	border-radius: 0.75rem;
 	box-shadow: 0px 4px 4px 0px #00000026;
 	border: 0px;
 	outline: 0px;
 
 }
-.toolkit_card .card .card_img{
+.inevntory_toolkit_cards .card .card_img{
 	aspect-ratio: 4 / 3;
     width: 100%;
     overflow: hidden;
     position: relative;
 	border-radius: 0.75rem;
 }
-.toolkit_card .card .card_img .card-title{
+.inevntory_toolkit_cards .card .card_img .card-title{
 	font-size: 18px;
 	margin-bottom: 4px;
 }
-.toolkit_card .card .card-text{
+.inevntory_toolkit_cards .card .card-text{
 	font-size: 14px;
 	color:#666666;
 
