--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2235,75 +2235,70 @@ margin-bottom: 175px;
 	border-radius: 10px;
 	box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
 	overflow: hidden;
-  }
+}
 
-  .video-frame-wrapper iframe {
-	width: 100%;
-	height: 532px; /* as per screenshot height */
-	display: block;
-  }
-  .each_industry_hero .each_industry_bg_img{
-	/* position: absolute; */
-	bottom: 0px;
-    width: 100%;
-    height: 500px;
-    z-index: -1;
-    left: 0;
-  }
-  .video_frame{
-	position: relative;
-    /* padding-top: 8rem; */
-    padding-bottom: 6.875rem;
-    margin-bottom: 6.25rem;
-  }
-  /* .img_box{
-	width: 642px;
-    height: 558px;
-	position: relative;
+.video-frame-wrapper iframe {
+width: 100%;
+height: 532px; /* as per screenshot height */
+display: block;
+}
+.each_industry_hero .each_industry_bg_img{
+/* position: absolute; */
+bottom: 0px;
+width: 100%;
+height: 500px;
+z-index: -1;
+left: 0;
+}
+.video_frame{
+position: relative;
+/* padding-top: 8rem; */
+padding-bottom: 6.875rem;
+margin-bottom: 6.25rem;
+}
 
-  } */
-  .construction_supplies_checklist_bg{
-	background-image: url(/images/pages/each-industry/bg3.svg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    padding: 0px;
-    aspect-ratio: 16 / 9;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .each_industry_construstion_supply_checklists .ellipse_left_bg{
-	background-image: url('/images/pages/each-industry/bg4.svg');
-  }
-  .each_industry_construstion_supply_checklists .ellipse_container_left{
-	margin-bottom: 150px;
-  }
+.construction_supplies_checklist_bg{
+background-image: url(/images/pages/each-industry/bg3.svg);
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+padding: 0px;
+aspect-ratio: 16 / 9;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.each_industry_construstion_supply_checklists .ellipse_left_bg{
+background-image: url('/images/pages/each-industry/bg4.svg');
+}
+.each_industry_construstion_supply_checklists .ellipse_container_left{
+margin-bottom: 150px;
+}
 
-  @media (min-width:1200px) and (max-width:1359px){
-	.each_industry_hero h1 {
-		font-size: 50px;
-		margin-bottom: 35px;
-	}
-	.each_industry_hero p {
-		font-size: 23px;
-	}
-  }
-  @media (min-width: 992px) and (max-width:1199px){
-	.each_industry_hero h1 {
-		font-size: 40px;
-		margin-bottom: 35px;
-	}
-	.each_industry_hero p {
-		font-size: 18px;
-	}
-	.each_industry_hero .heading {
-		margin-bottom: 45px;
-	}
-	.video_frame {
-		margin-bottom: 2.25rem;
-	}
-  }
+@media (min-width:1200px) and (max-width:1359px){
+.each_industry_hero h1 {
+	font-size: 50px;
+	margin-bottom: 35px;
+}
+.each_industry_hero p {
+	font-size: 23px;
+}
+}
+@media (min-width: 992px) and (max-width:1199px){
+.each_industry_hero h1 {
+	font-size: 40px;
+	margin-bottom: 35px;
+}
+.each_industry_hero p {
+	font-size: 18px;
+}
+.each_industry_hero .heading {
+	margin-bottom: 45px;
+}
+.video_frame {
+	margin-bottom: 2.25rem;
+}
+}
   /* Tablets (768px–991px) */
 @media (min-width: 768px) and (max-width: 991px){
 	.each_industry_hero h1 {
@@ -2538,6 +2533,7 @@ margin-bottom: 175px;
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
+	margin-bottom: 84px;
 }
 .help_center_hero h1{
 	font-size: 50px;
@@ -2547,13 +2543,13 @@ margin-bottom: 175px;
 	color:#E12B3E;
 }
 .help_card .icon{
-	width:55px;
-	height: 63px;
+	width:100px;
+	margin-bottom: 0.398rem;
 }
 .help_card .card-title{
 	color:#333333;
 	font-size: 20px;
-	margin-bottom:0.375rem;
+	margin-bottom:0.398rem;
 }
 .help_card .card-text{
 	color:#666666;
@@ -2564,6 +2560,7 @@ margin-bottom: 175px;
 	box-shadow: 0px 3.18px 3.18px 0px #F4646440;
 	border: 0px;
 	outline: none;
+	padding: 1.5rem 1rem;
 }
 
 .help_form .form-wrapper h3{
@@ -2586,8 +2583,7 @@ margin-bottom: 175px;
 	max-width: 700px;
 	margin-left: auto;
 	margin-right: auto;
-}
-  
+} 
 .help_form .file-upload-box {
 	background-color: #f9f9f9;
 	cursor: pointer;
@@ -2598,126 +2594,165 @@ margin-bottom: 175px;
     outline: none;
     border: none;
 }
-
-/* .bg-light-pink {
-	background: #fff6f6;
-	border-radius: 20px;
-	
-  } */
-  .help-section {
-	/* background: url('/images/pages/help-center/bg2.svg') no-repeat top right;
-	background-color: #fff6f6;
-	background-size: contain;
-	border-radius: 40px; */
-	padding: 60px 30px;
-	margin: 50px auto;
-  }
-  .bg_img{
-	background: url('/images/pages/help-center/bg2.svg') no-repeat top right;
-	background-color: #fff6f6;
-	background-size: contain;
-	/* aspect-ratio: 9/16; */
-	height: 100%;
-	width: 50%;
-    z-index: -1;
-    position: absolute;
-    RIGHT: 0;
-  }
-  .accordion-button:not(.collapsed) {
+.help-section {
+	margin-bottom: 84px;
+}
+.training-column .accordion-button:not(.collapsed) {
     color:#999999 !important;
     background-color: #ffff !important;
     box-shadow: none !important;
 }
-
-  .accordion-item {
+.training-column .accordion-item{
 	border-radius: 12px !important;
 	overflow: hidden;
-	border: 1px solid #999999;
-	margin-bottom: 20px;
-  }
-
-  .accordion-button {
+	border: 1px solid #999999 !important;
+	margin-bottom: 16px;
+}
+.training-column .accordion-button{
 	background-color: #fff;
 	font-weight: 500;
-	padding-top: 24px !important;
-	padding-bottom: 24px !important;
-	padding-right: 16px !important;
-	padding-right: 16px !important;
+	padding: 24px 16px !important;
 	color:#999999 !important;
-  }
-
-  .accordion-button::after {
-	/* background-image: none !important; */
-	/* content: "⌄" !important; */
+	font-size: 20px !important;
+}
+.training-column .accordion-button::after{
 	background-image: url('/images/pages/help-center/arrow_down.svg') !important;
 	transform: rotate(180deg) !important;
 	transition: transform 0.3s ease !important;
-  }
-
-  .accordion-button.collapsed::after {
+}
+.training-column .accordion-button.collapsed::after{
 	transform: rotate(0deg) !important;
-  }
-  .accordion-body{
+}
+.training-column .accordion-body{
 	padding: 0px 16px 24px 16px !important;
-  }
-
-  .accordion-body ul {
+}
+.training-column .accordion-body ul {
 	padding-left: 0;
-  }
-
-  .accordion-body li {
+}
+.training-column .accordion-body li {
 	list-style: none;
 	margin-bottom: 12px;
-  }
-
-  .accordion-body a {
+}
+.training-column .accordion-body a {
 	color: #e3122b;
 	text-decoration: none;
 	font-weight: 500;
 	display: flex;
-	/* justify-content: space-between; */
 	align-items: center;
-  }
-
-  .accordion-body a:hover span {
+}
+.training-column .accordion-body a:hover span {
 	transform: translateX(5px);
-  }
-
-  .accordion-body a span {
+}
+.training-column .accordion-body a span {
 	transition: all 0.3s ease;
 	font-size: 1rem;
 	font-weight: bold;
-  }
-
-  .section-title {
+}
+.training-column .section-title {
 	font-weight: 700;
 	font-size: 48px;
 	margin-bottom: 41px;
 	color:#333333;
-  }
-  
-/* kkkkkkkkkkkk */
-  
+} 
 .help-section.training {
 	margin-left : 0;
 	margin-right: 0;
 	padding-left: 0;
 	padding-right: 0;
 }
-.help-section .training_resources_bg {
-	background-size: 100% 100%;
-	background-position: top left;
-	background-repeat: no-repeat;
-}
 .help-section .training_resources_bg.bg3 {
-	background-image: url('/images/pages/help-center/bg3.svg');
+	background-color: #FFF5F5;
+	border-top-left-radius: 150px;
+	border-bottom-right-radius: 150px;
 }
 .help-section .training_resources_bg.bg4 {
-	background-image: url('/images/pages/help-center/bg3.svg');
+	background-color: #FFF5F5;
+	border-top-right-radius: 150px;
+	border-bottom-left-radius: 150px;
 }
 .help-section .training-column {
 	padding: 97px 0;
 	width: 80%;
+}
+@media (min-width:1200px) and (max-width:1359px){
+    .training-column .accordion-button {
+		font-size: 16px !important;
+		padding: 21px 11px !important;
+	}
+	.training-column .section-title {
+		font-size: 40px;
+	}
+}
+@media (min-width: 992px) and (max-width:1199px){
+	.help_card .icon {
+		width: 78px;
+	}
+	.help_card .card-title {
+		font-size: 13px;
+	}
+	.help_card .card-text {
+		font-size: 9px;
+	}
+	.help_center_hero h1 {
+		font-size: 45px;
+	}
+	.training-column .section-title {
+		font-size: 32px;
+	}
+	.training-column .accordion-button {
+		padding: 20px 11px !important;
+		font-size: 16px 
+	}	
+	.training-column .accordion-body a {
+		font-size: 12px;
+	}
+}
+@media (max-width: 991px){
+	.help-section .training-column {
+		padding:2rem;
+		width: 100%;
+	}
+}
+ /* Tablets (768px–991px) */
+ @media (min-width: 768px) and (max-width: 991px){
+	.help_center_hero {
+		padding: 50px;
+	}
+	.help_card.card {
+		padding: 2.5rem 1rem;
+	}
+	
+ }
+  /* Tablets (768px–991px) */
+@media (max-width: 767px){
+	.help_card .icon {
+		width: 85px;
+	}
+	.help_card .card-title {
+		font-size: 15px;
+	}
+	.help_card .card-text {
+		font-size: 8px;
+	}
+	.help_center_hero h1 {
+		font-size: 40px;
+	}
+	.help_center_hero {
+		padding: 40px 0px;
+	}
+	.training-column .section-title {
+		font-size: 27px;
+	}
+	.training-column .accordion-button {
+		font-size: 16px !important;
+	}
+	.training-column .accordion-body a {
+		font-size: 9px;
+	}
+	.training-column .accordion-button {
+		padding: 20px 9px !important;
+	}
+	
 }
 
 /* end help center */
